test/corpus/basics.txt
================
Print statement
================

>> "Hello, World!"

---

(source_file
  (print_statement
    (string (string_content))))

================
Variable assignment
================

x = 42

---

(source_file
  (assignment
    name: (identifier)
    value: (number)))

================
Typed variable
================

num x = 42

---

(source_file
  (typed_assignment
    type: (type)
    name: (identifier)
    value: (number)))

================
Function definition
================

fn (num a, num b) num add:
    return a + b

---

(source_file
  (function_definition
    (parameter_list
      (parameter
        (typed_parameter type: (type) name: (identifier)))
      (parameter
        (typed_parameter type: (type) name: (identifier))))
    return_type: (return_type (type))
    name: (identifier)
    body: (block
      (return_statement
        (addition (identifier) (identifier))))))

================
If/else
================

if x > 5:
    >> "big"
else:
    >> "small"

---

(source_file
  (if_statement
    condition: (comparison (identifier) (number))
    body: (block (print_statement (string (string_content))))
    (else_clause
      body: (block (print_statement (string (string_content)))))))

================
For loop
================

for n in range(10):
    >> n

---

(source_file
  (for_statement
    variable: (identifier)
    iterable: (call_expression function: (identifier) (argument_list (number)))
    body: (block (print_statement (identifier)))))

================
Lambda
================

double = fn(x) -> x * 2

---

(source_file
  (assignment
    name: (identifier)
    value: (lambda
      (identifier)
      body: (multiplication (identifier) (number)))))

================
Method chain
================

>> "hello".upper()

---

(source_file
  (print_statement
    (method_call
      object: (string (string_content))
      method: (identifier))))

================
Use statement
================

use "std/math"

---

(source_file
  (use_statement
    path: (string (string_content))))

================
Comment
================

-- this is a comment

---

(source_file
  (comment))

================
Public function
================

pub fn (str s) str shout:
    return s.upper()

---

(source_file
  (function_definition
    (parameter_list
      (parameter
        (typed_parameter type: (type) name: (identifier))))
    return_type: (return_type (type))
    name: (identifier)
    body: (block
      (return_statement
        (method_call
          object: (identifier)
          method: (identifier))))))

================
Void function
================

fn (str msg) void log:
    >> msg

---

(source_file
  (function_definition
    (parameter_list
      (parameter
        (typed_parameter type: (type) name: (identifier))))
    return_type: (return_type (type))
    name: (identifier)
    body: (block (print_statement (identifier)))))

================
Function returning function
================

fn () fn make_counter:
    count = 0
    fn () num inc:
        count = count + 1
        return count
    return inc

---

(source_file
  (function_definition
    return_type: (return_type (type))
    name: (identifier)
    body: (block
      (assignment name: (identifier) value: (number))
      (function_definition
        return_type: (return_type (type))
        name: (identifier)
        body: (block
          (assignment name: (identifier) value: (addition (identifier) (number)))
          (return_statement (identifier))
          (return_statement (identifier)))))))

================
Union return type
================

fn (str s) dict | list | str | num | bool parse:
    return s

---

(source_file
  (function_definition
    (parameter_list
      (parameter
        (typed_parameter type: (type) name: (identifier))))
    return_type: (return_type (type) (type) (type) (type) (type))
    name: (identifier)
    body: (block (return_statement (identifier)))))

================
Error handling
================

result = error("bad")
if err(result):
    >> result

---

(source_file
  (assignment
    name: (identifier)
    value: (call_expression function: (identifier) (argument_list (string (string_content)))))
  (if_statement
    condition: (call_expression function: (identifier) (argument_list (identifier)))
    body: (block (print_statement (identifier)))))

================
Catch statement
================

catch result = divide(10, 0):
    >> result

---

(source_file
  (catch_statement
    name: (identifier)
    value: (call_expression function: (identifier) (argument_list (number) (number)))
    body: (block (print_statement (identifier)))))

================
String interpolation
================

name = "Eric"
>> "Hello, {name}!"

---

(source_file
  (assignment
    name: (identifier)
    value: (string (string_content)))
  (print_statement
    (string
      (string_content)
      (interpolation (identifier))
      (string_content))))

================
Functional methods
================

>> [1, 2, 3].map(fn(x) -> x * 2)

---

(source_file
  (print_statement
    (method_call
      object: (list_literal (number) (number) (number))
      method: (identifier)
      (argument_list
        (lambda
          (identifier)
          body: (multiplication (identifier) (number)))))))

================
Match/case
================

match x:
    case 1:
        >> "one"
    _:
        >> "other"

---

(source_file
  (match_statement
    value: (identifier)
    (case_clause
      value: (number)
      body: (block (print_statement (string (string_content)))))
    (default_clause
      body: (block (print_statement (string (string_content)))))))
